# ns2-stat

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
ns2-stat/: Cargo.toml  README.md
ns2-stat-api/: Cargo.toml  README.md
ns2-stat-api/src/: data.rs  main.rs
ns2-stat-cli/: Cargo.toml  README.md
ns2-stat-cli/src/: helpers.rs  main.rs  table.rs  teams.rs
ns2-stat-lib/: Cargo.toml
ns2-stat-lib/src/: ideas.md  types.rs
ns2-stat/src/: input_types.rs  lib.rs  main.rs  table.rs  types.rs
src/: input.json  lib.rs  main.rs  table.rs  types.rs
test_data/: 1629228969.json  1629231388.json  1629235989.json  1630089535.json  1630091897.json  1630095698.json  1630098803.json  1636055215.json  1636059862.json  1636062290.json  1636066013.json  1636068062.json  1637870178.json  1637872899.json  1637874909.json  1637877468.json  1637878873.json  1637879022.json  1637879420.json  1637880542.json  1637881239.json  1637882844.json  1638475881.json  1638478976.json  1638481011.json  1638483072.json  1638486237.json  1638489981.json  1639080389.json  1639083058.json  1639087488.json  1639089528.json  1639093212.json  1639095698.json  1639097494.json  1639099917.json  1639685212.json  1639688853.json  1639690791.json  1639693061.json  (+166 more)
