[package]
name = "ns2-stat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
clap = { version = "4.4", features = ["derive"] }
ns2-stat = { path = "../ns2-stat" }
serde = "1.0"
serde_json = "1.0"
notify = "6.1"
parking_lot = "0.12"
fs-err = "2.11"
