[package]
name = "ns2-stat-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ns2-stat = { path = "../ns2-stat" }
rayon = "1.8"
serde_json = "1.0"
