[package]
name = "ns2-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ns2-stat-lib = { path = "../ns2-stat-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
clap = { version = "3.1", default_features = false, features = ["std", "derive"] }
